--- a/public/index.html
+++ b/public/index.html
@@ -48,5 +48,6 @@
     </header>
     <div class="container" ng-view></div>
     <div class="modal-parent"></div>
+    <div id="snow"></div>
 </body>
 </html>
